--- a/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
+++ b/application/views/scripts/etablissement/effectifs-degagements-etablissement.phtml
@@ -1,3 +1,4 @@
+<!-- TODO Mettre le descriptif personnalisé -->
 <div class='pull-right'>
     <a href="<?= $this->url(array('controller' => 'etablissement', 'action' => 'effectifs-degagements-etablissement-edit', 'id' => $this->idEtablissement), false, true) ?>" class="btn">Modifier les effectifs et dégagements</a>
 </div>
