--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -60,10 +60,10 @@
                         </option>
                     <?php endforeach ?>
                 </select>
-                <?php if(intval($this->champ['ID_TYPECHAMP']) === 6) :?>
+                <?php if('Parent' === $this->type) :?>
                     <div>
                         <label for='is-tableau'>Afficher comme tableau
-                            <input name='is-tableau' type='checkbox' <?= $this->champ['tableau'] ? 'checked' : '' ?>/>
+                            <input name='is-tableau' type='checkbox' <?= 1 === $this->champ['tableau'] ? 'checked' : '' ?>/>
                         </label>
                     </div>
                 <?php endif ?>
@@ -85,7 +85,7 @@
                             <a href='#' id='add-list-value'>Ajouter une valeur</a>
                         </div>
                         <div class="row-fluid">
-                            <div id="valeurs-liste" class="span10">
+                            <div id="list-value" class="span10">
                             </div>
                         </div>
                     </div>
