--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -1,13 +1,13 @@
 <?php if($this->action != "add" && $this->do != "new" ) : ?>
 <?php $this->placeholder('lateral_navigation')->captureStart(); // Capture du 'lateral_navigation' ?>
-<input type='hidden' name='ID_CREATEUR' id='ID_CREATEUR' value='<?php echo $this->idUser; ?>' />	
+<input type='hidden' name='ID_CREATEUR' id='ID_CREATEUR' value='<?php echo $this->idUser; ?>' />
 <ul class="nav nav-tabs nav-stacked menu_dashboard" >
     <li class="<?php echo ( $this->action == "index" ) ? "active" : "read" ?>">
-        <a 
+        <a
             href='<?php echo $this->url(array("controller" => "dossier", "id" => $this->idDossier), false, true) ?>'><em class="icon-info-sign icon-black"></em> Informations générales</a>
     </li>
-        
-	<?php		
+
+	<?php
             if($this->idTypeDossier == 1 && $this->natureDossier != 3 && $this->natureDossier != 9) {
                 echo "<li class='".(( $this->action == "descriptif") ? "active" : "read" )."'>
                         <a "
@@ -36,12 +36,12 @@
                     </li>";
             }
 	?>
-		
+
         <li class='<?php echo ( $this->action == "liees" ) ? "active" : "read" ?>'>
-            <a  
+            <a
                 href='<?php echo $this->url(array("controller" => "dossier", "action"=>"liees", "id" => $this->idDossier), false, true) ?>'><em class="icon-folder-open icon-black"></em> Établissements et dossiers liés</a>
         </li>
-		
+
 	<?php
             if($this->natureDossier != 40 && $this->natureDossier != 41 && $this->natureDossier != 42 && $this->natureDossier != 44) {
                 echo "<li class='".( ( $this->action == "contact" ) ? "active" : "read" )."'>
@@ -50,18 +50,18 @@
                     </li>";
             }
 	?>
-        
+
         <li class='<?php echo ( $this->action == "piece-jointe" ) ? "active" : "read" ?>'>
-            <a 
+            <a
                href='<?php echo $this->url(array("controller" => "dossier", "action"=>"piece-jointe", "id" => $this->idDossier), false, true) ?>'><em class="icon-share icon-black"></em> Pièces jointes</a>
-        </li> 
+        </li>
         <li class="nav-header">Actions</li>
         <?php
                 $verrou = true;
                 if ($this->verrou == 1  || (isset($action) && $action == 'new')) {
                         $label = "Déverrouiller";
                         $idLink = "DEVERROU";
-                } else { 
+                } else {
                         $label = "Verrouiller";
                         $idLink = "VERROU";
                         $verrou = false;
@@ -85,7 +85,17 @@
         <?php endif; ?>
         <?php if(!$verrou && $this->is_allowed_delete_dossier) : ?>
         <li>
-            <a id="suppressionDossier" href="#"><em class="icon-remove icon-black"></em>Supprimer le dossier</a>
+            <?php if(null !== $this->infosDossier->DATESUPPRESSION_DOSSIER) : ?>
+                <a id="suppressionDossier" href="#">
+                    <em class="icon-ok icon-black"></em>
+                    Rétablir le dossier
+                </a>
+            <?php else :?>
+                <a id="retablissementDossier" href="#">
+                    <em class="icon-remove icon-black"></em>
+                    Supprimer le dossier
+                </a>
+            <?php endif; ?>
         </li>
         <?php endif; ?>
     </ul>
@@ -94,7 +104,7 @@ endif; ?>
 
 <?php $this->placeholder('page_header')->captureStart();  // Capture du 'before_content' ?>
 
-<?php 
+<?php
     if($this->action == "add" || $this->do == "new" ){
         //Cas d'ajout d'un nouveau dossier
         echo "
@@ -144,7 +154,7 @@ endif; ?>
                 }
                 echo ")</span>";
             }
-                
+
             echo " <span style='font-size:10px'>#".$etablissementInfos['general']['NUMEROID_ETABLISSEMENT']."</span>";
         }
         echo "
@@ -171,13 +181,13 @@ endif; ?>
         if($nbEtab > 0){
             if($nbEtab == 1 && $this->enteteEtab[0]["LIBELLE_GENRE"] == "Site"){
                 echo "Site concerné : &nbsp;";
-                
+
                 echo "
                     <a href='/etablissement/index/id/".$this->enteteEtab[0]['ID_ETABLISSEMENT']."' class='etab'>
-                        ".$this->enteteEtab[0]['LIBELLE_ETABLISSEMENTINFORMATIONS']." 
+                        ".$this->enteteEtab[0]['LIBELLE_ETABLISSEMENTINFORMATIONS']."
                     </a>
                 ";
-                        
+
                 echo " <span style='font-size:10px'>#".$this->enteteEtab[0]['infosEtab']['general']['NUMEROID_ETABLISSEMENT']."</span>";
             }else{
                 echo "Etablissement(s) concerné(s) : &nbsp;";
@@ -237,9 +247,9 @@ endif; ?>
                             }
                             echo ")</span>";
                         }
-                        
+
                         echo " <span style='font-size:10px'>#".$value['infosEtab']['general']['NUMEROID_ETABLISSEMENT']."</span>";
-                                        
+
                         $i++;
                     }
                 }
@@ -303,7 +313,7 @@ endif; ?>
 			});
 			return false;
 		});
-	
+
 		$("#DEVERROU").live('click',function(){
 			$.ajax({
                 url: "/dossier/deverrou",
