--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1229,6 +1229,7 @@ $(".delaipresc").live('click', function() {
     if ('edit' == $action) {
         $formUrl = "/dossier/index/id/".$this->idDossier;
     }
+    //TODO Exporter tous le JS des 1000 lignes precedentes ça n a rien à faire ici
 ?>
 
 <div id='dossierInfos'>
