ajout ecriture suppression retablssement

--- a/application/layouts/etablissement.phtml
+++ b/application/layouts/etablissement.phtml
@@ -14,7 +14,17 @@
         <li><a href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true)?> '><em class="icon-plus icon-black"></em> Ajouter un dossier</a></li>
 		<?php if($this->is_allowed_delete_etablissement): ?>
         <li>
-            <a id="suppressionEtablissement" href="#"><em class="icon-remove icon-black"></em>Supprimer l'établissement</a>
+            <?php if(null !== $this->etablissement['informations']['DATESUPPRESSION_ETABLISSEMENT']) : ?>
+                <a id="retablissementEtablissement" href=<?= "/etablissement/retablir-etablissement/idEtablissement/". $this->etablissement['ID_ETABLISSEMENT'] ?>>
+                    <em class="icon-ok icon-black"></em>
+                    Rétablir l'établissement
+                </a>
+            <?php else :?>
+                <a id="suppressionEtablissement" href="#">
+                    <em class="icon-remove icon-black"></em>
+                    Supprimer l'établissement
+                </a>
+            <?php endif; ?>
         </li>
         <?php endif ?>
 	</ul>
@@ -33,11 +43,18 @@
             <?php foreach($this->etablissement['parents'] as $etablissement) : ?>
                 <a href='/etablissement/index/id/<?php echo  $etablissement["ID_ETABLISSEMENT"] ?>'>
                     <?php echo $etablissement["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
-                </a> - 
+                </a> -
             <?php endforeach ?>
         <?php endif ?>
         <?php echo file_exists(APPLICATION_PATH . DS . '..' . DS . 'public' . DS . 'images' . DS . 'types' . DS . 'b' . DS . 'icone-type-' . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . '.png') ? "<img src='/images/types/b/icone-type-" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . ".png' title='" . $this->etablissement['informations']['LIBELLE_TYPE_PRINCIPAL'] . "' />" : ''; ?>
         <?php echo $this->etablissement['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"] ?>
+        <li>
+            <?php if(null !== $this->etablissement['informations']['DATESUPPRESSION_ETABLISSEMENT']) : ?>
+                <span class='label label-important'>
+                    ETALBISSEMENT SUPPRIME
+                </span>
+            <?php endif; ?>
+        </li>
         <?php if ($this->etablissement['general']['NUMEROID_ETABLISSEMENT']): ?>
             <span class="pull-right">
                 <small>
@@ -53,7 +70,7 @@
             Présence d'un dossier avec avis differé
         </p>
     <?php elseif($this->etablissement['avis'] != null) : ?>
-    
+
          <?php if($this->etablissement['avis'] == 1 && $this->avis == "avisDoss") : ?>
             <p class="avis F">Favorable <?php echo $this->etablissement['informations']['ID_GENRE'] == 3 ? '' : " à l'exploitation " ?></p>
          <?php elseif($this->etablissement['avis'] == 2  && $this->avis == "avisDoss") : ?>
@@ -66,9 +83,9 @@
          <?php else : ?>
             <p class="avis">Avis d'exploitation indisponible</p>
          <?php endif ?>
-        
+
     <?php endif ?>
-    
+
     <!-- Présence de risques naturels ou technologiques-->
     <?php if(!empty($this->etablissement['general']['DESCTECH_RISQUES_NATURELS_ETABLISSEMENT'])) : ?>
         <p class='label label-warning'>
