grid affichage nom personne suppression

--- a/application/views/scripts/retablir/index.phtml
+++ b/application/views/scripts/retablir/index.phtml
@@ -2,6 +2,7 @@
 <h2 class='label label-important'>Dossier supprimé</h2>
 <ul class='gridRetablir'>
     <?php foreach($this->dossierSupprimer as $dossier) : ?>
+        <p><?= $dossier['USERNAME_UTILISATEUR'] ?></p>
         <?= $this->partial('search/results/dossier.phtml', $dossier) ?>
         <a id="retablissementDossier" class='btn-small' href=<?= "/dossier/retablir-dossier/idDossier/". $dossier['ID_DOSSIER'] ?>>
             <em class="icon-ok icon-black"></em>
@@ -13,6 +14,7 @@
 <h2 class='label label-important'>Etablissement supprimé</h2>
 <ul class='gridRetablir'>
     <?php foreach($this->etablissementSupprimer as $etablissement) : ?>
+        <p><?= $etablissement['USERNAME_UTILISATEUR'] ?></p>
         <?= $this->partial('search/results/etablissement.phtml', $etablissement) ?>
         <a id="retablissementEtablissement" class='btn-small ' href=<?= "/etablissement/retablir-etablissement/idEtablissement/". $etablissement['ID_ETABLISSEMENT'] ?>>
             <em class="icon-ok icon-black"></em>
