--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1258,6 +1258,6 @@ dl.champ_effectif_camping dd input {
 
 .gridRetablir{
     display: grid;
-    grid-template-columns: 10fr 2fr;
-    text-align: end;
+    grid-template-columns: 1fr 10fr 2fr;
+    text-align: center;
 }
